<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.Ayuda">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/Pastel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgAtrasAyuda"
            android:layout_width="65sp"
            android:layout_height="65sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/atras"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Ayuda - Preguntas Frecuentes"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAtrasAyuda"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10sp"
                    android:elevation="10sp"
                    app:cardCornerRadius="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/despliega1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="5sp"
                            android:animateLayoutChanges="true"
                            android:onClick="onClick"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="¿Que pasa si desinstalo la App?"
                                android:textColor="@color/rojo"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/imgdesplega1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="70sp"
                                android:src="@drawable/ic_desplegar_abajo" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/texto1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/siDesistalaApp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10sp"
                    android:elevation="10sp"
                    app:cardCornerRadius="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/despliega2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="5sp"
                            android:animateLayoutChanges="true"
                            android:onClick="onClick"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="¿Como Agrego Un Producto?"
                                android:textColor="@color/rojo"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/imgdesplega2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="70sp"
                                android:src="@drawable/ic_desplegar_abajo" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/texto2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/agregarProducto"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10sp"
                    android:elevation="10sp"
                    app:cardCornerRadius="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/despliega3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="5sp"
                            android:animateLayoutChanges="true"
                            android:onClick="onClick"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="¿Cuantos Registros Puedo hacer?"
                                android:textColor="@color/rojo"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/imgdesplega3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="70sp"
                                android:src="@drawable/ic_desplegar_abajo" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/texto3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/cantRegistros"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10sp"
                    android:elevation="10sp"
                    app:cardCornerRadius="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/despliega4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="5sp"
                            android:animateLayoutChanges="true"
                            android:onClick="onClick"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="¿Puedo sugerir que se agrege algo a la App?"
                                android:textColor="@color/rojo"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/imgdesplega4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2sp"
                                android:src="@drawable/ic_desplegar_abajo" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/texto4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/sugerencias"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10sp"
                    android:elevation="10sp"
                    app:cardCornerRadius="15sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/despliega5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginTop="5sp"
                            android:animateLayoutChanges="true"
                            android:onClick="onClick"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="¿Puedo Pedir una App propia para mi negocio?"
                                android:textColor="@color/rojo"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/imgdesplega5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="2sp"
                                android:src="@drawable/ic_desplegar_abajo" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/texto5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/pedirApp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chatconnosotros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Verde"
            android:elevation="10dp"
            android:src="@drawable/whatsapp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>